--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -15,7 +15,7 @@
       {% block content %}
       <h1>Development Updates</h1>
       <div class="row">
-          {% for post in posts %}
+          {% for post in object_list %}
               <div class="col">
                   <div class="card" style="width: 18rem;">
                       <img src="{{ post.img_url }}" class="card-img-top" alt="...">
@@ -23,7 +23,7 @@
                           <h4 class="card-title">{{ post.name }}</h4>
                           <h6 class="card-category"> <strong>{{ post.category }}</strong> </h6>
                           <p class="card-text">{{ post.content }}</p>
-                          <a href="#" class="btn btn-primary">View Post</a>
+                          <a href="{% url 'post-details' post.pk %}" class="btn btn-primary">View Post</a>
                       </div>
                   </div>
               </div>
